--- a/mails/Password-update.ejs
+++ b/mails/Password-update.ejs
@@ -81,9 +81,7 @@
         <div class="email-footer">
           <p>
             In case of any questions, please write to using
-            <a href="mailto:prelovedbagske@outlook.com"
-              >prelovedbagske@outlook.com</a
-            >
+            <a href="mailto:powelelss@outlook.com">powelelss@outlook.com</a>
           </p>
           <p>&copy; 2024 QuizzHacks. All rights reserved.</p>
         </div>
