--- a/mails/Activation-mails.ejs
+++ b/mails/Activation-mails.ejs
@@ -86,9 +86,7 @@
         <div class="email-footer">
           <p>
             In case of any questions, please write to using
-            <a href="mailto:prelovedbagske@outlook.com"
-              >prelovedbagske@outlook.com</a
-            >
+            <a href="mailto:powelelss@outlook.com">powelelss@outlook.com</a>
           </p>
           <p>&copy; 2024 Powelelss. All rights reserved.</p>
         </div>
