--- a/mails/Reset-Password.ejs
+++ b/mails/Reset-Password.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuizzHacks ActivationEmail</title>
+    <title>Powelelss ActivationEmail</title>
     <style type="text/css">
       /*Base formatting*/
       body {
@@ -69,10 +69,10 @@
   <body>
     <div class="email-wrapper">
       <div class="email-header">
-        <h1>QuizzHacks Password Update Confirmation</h1>
+        <h1>Powelelss Password Update Confirmation</h1>
       </div>
       <div class="email-body">
-        <p>A request has been made to update your password for Quizzhacks</p>
+        <p>A request has been made to update your password for Powelelss</p>
         <p>Click the link below to update your password</p>
         <p><%= link %></p>
         <p>
@@ -86,7 +86,7 @@
             In case of any questions, please write to using
             <a href="mailto:powelelss@outlook.com">powelelss@outlook.com</a>
           </p>
-          <p>&copy; 2024 QuizzHacks. All rights reserved.</p>
+          <p>&copy; 2024 Powelelss. All rights reserved.</p>
         </div>
       </div>
     </div>
