--- a/mails/Activation-mails.ejs
+++ b/mails/Activation-mails.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuizzHacks ActivationEmail</title>
+    <title>Powelelss ActivationEmail</title>
     <style type="text/css">
       /*Base formatting*/
       body {
