--- a/mails/Reset-Password.ejs
+++ b/mails/Reset-Password.ejs
@@ -74,6 +74,7 @@
       <div class="email-body">
         <p>A request has been made to update your password for Powelelss</p>
         <p>Click the link below to update your password</p>
+        <a href="<%= link %>"><%= link %></a>
         <p><%= link %></p>
         <p>
           If you did not make the request the ignore this mail and contact us
